--- a/app.css
+++ b/app.css
@@ -126,6 +126,43 @@ p {
   font-weight: 300;
 }
 
+.advice-container {
+  margin: 1.5em auto;
+}
+
+.advice-slip {
+  background: var(--tertiary-color);
+  font-family: "Sriracha", cursive;
+  padding: var(--default-padding);
+  border-radius: 0.5em;
+  box-shadow: 0 10px 10px 2px rgba(255, 255, 255, 0.3);
+  transform: rotate(2deg);
+}
+
+@media (min-width: 500px) {
+  .wrapper {
+    grid-template-columns: auto auto;
+    grid-template-rows: auto 1fr auto;
+    grid-template-areas:
+      "header header"
+      "sidebar content"
+      "footer footer";
+  }
+}
+
+@media (min-width: 1100px) {
+  .wrapper {
+    grid-template-columns: minmax(auto, 50%);
+  }
+}
+
+.tweet-button {
+  padding: var(--default-padding);
+  width: 100%;
+  border-radius: 1em;
+  font-size: 1em;
+}
+
 /* 
 html {
   border: 2px solid red;
