--- a/app.css
+++ b/app.css
@@ -129,16 +129,19 @@ h1 {
 
 h1 span {
   display: block;
-  padding: 0.5em 0;
+  padding: 0.5em 0 0;
   font-size: 0.5em;
 }
 
 h2 {
-  font-weight: 500;
+  font-weight: 700;
   padding: 0.75em 0;
 }
 
-/*h3 here*/
+h3 {
+  font-family: "Sriracha", cursive;
+  padding: 0.25em 0;
+}
 
 .advice-container {
   margin: 1.5em auto;
