--- a/app.css
+++ b/app.css
@@ -138,6 +138,38 @@ h3 {
   padding: 0.25em 0;
 }
 
+.side,
+.content,
+section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.side > section {
+  background: var(--tertiary-color);
+  border-radius: 0.5em;
+  margin: 1.5em;
+  box-shadow: 0.5em 0.5em 0.5rem rgba(255, 255, 255, 0.1);
+  border: 1px gray solid;
+}
+
+.side > section:nth-of-type(1n) {
+  transform: rotate(-2deg);
+}
+.side > section:nth-of-type(2n) {
+  transform: rotate(2deg);
+}
+
+.side > section > h3 {
+  width: 100%;
+  text-align: center;
+  border-radius: 0.5em 0.5em 0 0;
+  background-color: var(--secondary-color);
+  border-bottom: 0.5em double var(--primary-color);
+}
+
 .advice-container {
   margin: 1.5em auto;
 }
