--- a/app.css
+++ b/app.css
@@ -171,7 +171,7 @@ section {
 }
 
 .advice-container {
-  margin: 1.5em auto;
+  margin: 1.5em auto 3em;
 }
 
 .advice-slip {
@@ -179,8 +179,9 @@ section {
   font-family: "Sriracha", cursive;
   padding: var(--default-padding);
   border-radius: 0.5em;
-  box-shadow: 0 10px 10px 2px rgba(255, 255, 255, 0.3);
-  transform: rotate(2deg);
+  box-shadow: 0.5em 0.5em 0.75em 0.1em rgba(255, 255, 255, 0.3);
+  transform: rotate(-2deg);
+  border: 5px var(--main-text-color) double;
 }
 
 @media (min-width: 500px) {
