--- a/app.css
+++ b/app.css
@@ -195,9 +195,15 @@ section {
   }
 }
 
+@media (min-width: 768px) {
+  .side > section {
+    max-width: 60%;
+  }
+}
+
 @media (min-width: 1100px) {
   .wrapper {
-    grid-template-columns: minmax(auto, 50%);
+    grid-template-columns: 1fr 2fr;
   }
 }
 
