--- a/app.css
+++ b/app.css
@@ -241,3 +241,16 @@ section {
   border-radius: 1em;
   font-size: 1em;
 }
+
+.main-head {
+  padding-top: 5em;
+  position: relative;
+  top: -5em;
+}
+
+.content,
+.side,
+.main-footer {
+  position: relative;
+  top: -5em;
+}
