--- a/app.css
+++ b/app.css
@@ -287,3 +287,30 @@ section {
   background: var(--tertiary-color);
   color: var(--main-text-color);
 }
+
+.content::before,
+.main-head::before,
+.side::before,
+.main-footer::before {
+  content: " ";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 100%;
+  background-image: url("metal-tile.jpg");
+  filter: opacity(0.1);
+}
+
+.main-head::before {
+  border-radius: 0 0 2em 2em;
+}
+
+.content::before,
+.side::before {
+  border-radius: 2em;
+}
+
+.main-footer::before {
+  border-radius: 2em 2em 0 0;
+}
