Adjust advice font for larger devices.

--- a/app.css
+++ b/app.css
@@ -320,6 +320,10 @@ section {
   .advice-container {
     max-width: 80%;
   }
+
+  .advice-slip {
+    font-size: 1.25em;
+  }
 }
 
 @media (min-width: 1024px) {
@@ -329,6 +333,10 @@ section {
 
   .advice-container {
     max-width: 60%;
+  }
+
+  .advice-slip {
+    font-size: 1.5em;
   }
 
   .tweet-button {
